<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".diezSeg.DiezSeg">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tlDiezSegs"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/Primary"
        android:elevation="4dp"
        android:gravity="center"
        android:theme="@style/ToolbarColoredBackArrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bungee"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/_10_segundos"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            tools:layout_editor_absoluteY="18dp"/>
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="550dp"
        android:layout_marginStart="16dp"

        android:layout_marginEnd="16dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlDiezSegs">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/frame">

            <TextView
                android:id="@+id/tvContenido"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/bungee"
                android:gravity="center"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/bReglas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvShots" />

            <Button
                android:id="@+id/bReglas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/bungee"
                android:text="@string/reglas"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvShots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/bungee"
                android:text="@string/textview"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/bungee"
                android:text="@string/shots"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.androchef.happytimer.countdowntimer.CircularCountDownView
                android:id="@+id/circularCountDownView"
                android:layout_width="102dp"
                android:layout_height="102dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/bReglas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvContenido"
                app:layout_constraintVertical_bias="1.0"
                app:stroke_background_color="@color/black"
                app:stroke_background_thickness="31dp"
                app:stroke_foreground_color="@color/colorLightBlue"
                app:stroke_foreground_thickness="40dp"
                app:timer_text_color="@color/colorLightBlue"
                app:timer_text_format="HOUR_MINUTE_SECOND"
                app:timer_text_isBold="true"
                app:timer_text_shown="true"
                app:timer_text_size="20sp"
                app:timer_type="COUNT_UP" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>